[package]
name = "dmarc"
version = "0.1.0"
edition = "2024"

[dependencies]
trust-dns-resolver = { version = "0.23.2", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5.38", features = ["derive", "color", "help"] }
addr = "0.15.6"
anyhow = "1.0.98"
strum = { version = "0.27.1", features = ["derive"] }
colored = "3.0.0"
dashmap = "7.0.0-rc2"
